--- a/zad.13.html
+++ b/zad.13.html
@@ -13,7 +13,7 @@
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
-<td width=18% align="center"><a href="start.html" >Start</a>
+<td width=18% align="center"><a href="zad.13.1.html" >Start</a>
 </td>
 </tr>
 </table>
