--- a/zad.13.html
+++ b/zad.13.html
@@ -6,15 +6,36 @@
 <body>
 <table width=95% border="1" align="center">
 <tr>
+<td colspan="3" align="center"><font size="6" ><b>LOGO-Kasjan Bojko<br>
+Gdańsk, 18-11-2021</b></font>
+
+</tr>
+<tr>
 <td width=18% align="center">
+<b>lewe menu:</b><br>
 <a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
 <br>
 <a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
 </td>
-<td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
+<td align=center><iframe width=650 height=650 name="strony" src="zad.13.1.html" border="0"></iframe>
 </td>
-<td width=18% align="center"><a href="zad.13.1.html" >Start</a>
+<td width=18% align="center" >
+<MAP NAME="kształty">
+<AREA SHAPE="poly" COORDS="41,5,65,59,18,59" HREF="INST_HTM_technik_2021.pdf" target="strony">
+<AREA SHAPE="rect" COORDS="9,68,77,114" HREF="tabela.html" target="strony">
+<AREA SHAPE="circle" COORDS="41,149,29" HREF="formularz.html" target="strony">
+<AREA SHAPE="rect" COORDS="5,184,85,237" HREF="mailto: kasjan.bojko.gdansk@gmail.com" target="strony">
+<AREA SHAPE="circle" COORDS="38,269,30" HREF="https://kaslopl.github.io/KASJAN__1P/strona główna.html" target="strony">
+</MAP>
+<IMG SRC="kształty.jpg"  USEMAP="#kształty">
+
 </td>
+</tr>
+<tr>
+<td colspan="3" align="center"><font size="6" ><b>STOPKA-Kasjan Bojko<br>
+Gdańsk, 18-11-2021</b></font>
+</td>
+
 </tr>
 </table>
 </body>
