--- a/zad.13.html
+++ b/zad.13.html
@@ -17,7 +17,7 @@ Gdańsk, 18-11-2021</b></font>
 <br>
 <a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
 </td>
-<td align=center><iframe width=650 height=650 name="strony" src="zad.13.1.html" border="0"></iframe>
+<td align=center><iframe width=650 height=650 name="strony" src="https://kaslopl.github.io/KASJAN__1P/strona główna.html" border="0"></iframe>
 </td>
 <td width=18% align="center" >
 <MAP NAME="kształty">
