--- a/zad.13.html
+++ b/zad.13.html
@@ -32,8 +32,9 @@ Gdańsk, 18-11-2021</b></font>
 </td>
 </tr>
 <tr>
-<td colspan="3" align="center"><font size="6" ><b>STOPKA-Kasjan Bojko<br>
-Gdańsk, 18-11-2021</b></font>
+<td colspan="3" align="center"><!-- www.DarmowyLicznik.pl -->
+<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=144720" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
+<!-- END www.DarmowyLicznik.pl -->
 </td>
 
 </tr>
