--- a/zad.13.html
+++ b/zad.13.html
@@ -32,9 +32,8 @@ Gdańsk, 18-11-2021</b></font>
 </td>
 </tr>
 <tr>
-<td colspan="3" align="center"><!-- www.DarmowyLicznik.pl -->
-<div class="image-rotator"><div class="rotator-slide" id="rotator-slide-1"><a href="https://www.darmowylicznik.pl/" title="Przejdź na stronę licznika" target="_blank"><img src="https://www.darmowylicznik.pl/licznik.php?id=144720" alt="Darmowy licznik odwiedzin" style="border:0px;" /></a></div></div>
-<!-- END www.DarmowyLicznik.pl -->
+<td colspan="3" align="center"> <a href='http://www.counterliczniki.com'>http://counterliczniki.com</a> <script type='text/javascript' src='https://www.counterliczniki.com/auth.php?id=25f36b54ae3055010159f06a736cdd6f72783fe5'></script>
+<script type="text/javascript" src="https://www.counterliczniki.com/pl/home/counter/886996/t/5"></script>
 </td>
 
 </tr>
