--- a/zad.13.html
+++ b/zad.13.html
@@ -13,9 +13,9 @@ Gdańsk, 18-11-2021</b></font>
 <tr>
 <td width=18% align="center">
 <b>lewe menu:</b><br>
-<a href="http://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
+<a href="https://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
 <br>
-<a href="http://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
+<a href="https://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="https://kaslopl.github.io/KASJAN__1P/strona główna.html" border="0"></iframe>
 </td>
