--- a/zad.13.html
+++ b/zad.13.html
@@ -15,7 +15,7 @@ Gdańsk, 18-11-2021</b></font>
 <b>lewe menu:</b><br>
 <a href="https://www.kuratorium.gda.pl" target="strony">Kuratorium</a>
 <br>
-<a href="https://www.zse.gda.pl" target="strony">ZSE Gdańsk</a>
+<a href="https://zse.edu.gdansk.pl/pl" target="strony">ZSE Gdańsk</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="https://kaslopl.github.io/KASJAN__1P/strona główna.html" border="0"></iframe>
 </td>
