--- a/zad.13.html
+++ b/zad.13.html
@@ -7,7 +7,7 @@
 <body>
 <table width=95% border="1" align="center">
 <tr>
-<td colspan="3" align="center"><font size="6" ><b>LOGO-Kasjan Bojko<br>
+<td colspan="3" align="center"><font size="6" ><b><img src="LOGO.jpg"><br>
 Gdańsk, 18-11-2021</b></font>
 
 </tr>
